# HK-Terminal-Final

./: build.gradle  packages.json  settings.gradle
.github/workflows/: release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-pty.cpp
app/src/main/java/com/hk/hkterminal/: HKDatabaseManager.java  HKDependencyEngine.java  HKDispatcher.java  HKGhostExtractor.java  HKGuardian.java  HKLogger.java  HKPackageManager.java  HKRepairEngine.java  HKRuntimeShield.java  HKStorageProvider.java  HKSwarmFetcher.java  MainActivity.java  PtyBridge.java  RootUtils.java  TerminalEngine.java  TerminalView.java
app/src/main/res/layout/: activity_main.xml
​.github/workflows/: release.yml
